Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5380

[C++] Fix and enable UBSan for unaligned accesses.

    XMLWordPrintableJSON

Details

    Description

      Currently unaligned access configuration in UBSan has been turned off. We should introduce a method that safely loads unaligned data, and use it to fix UBSan errors. Then turn them on for UBSan.

      Attachments

        Activity

          People

            emkornfield@gmail.com Micah Kornfield
            emkornfield@gmail.com Micah Kornfield
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 3h 50m
                3h 50m